[gd_scene load_steps=9 format=2]

[ext_resource path="res://Entities/PlayerAreaNotifier/PlayerAreaNotifier.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sprites/Miscellaneous/Door.png" type="Texture" id=2]
[ext_resource path="res://Entities/ScreenTransitor/Door.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "DoorClose"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 3, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "DoorOpen"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 32 )

[node name="Door" type="ReferenceRect"]
pause_mode = 2
margin_right = 32.0
margin_bottom = 64.0
rect_min_size = Vector2( 8, 8 )
script = ExtResource( 3 )

[node name="AreaNotifier" parent="." instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0
PLAYER_ON_FLOOR_ONLY = true

[node name="Label" parent="AreaNotifier" index="1"]
custom_colors/font_color = Color( 0, 1, 0.407843, 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "Idle"
anims/DoorClose = SubResource( 1 )
anims/DoorOpen = SubResource( 2 )
anims/Idle = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="DoorCloseTimer" type="Timer" parent="."]
one_shot = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 17, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 3 )

[connection signal="entered_area" from="AreaNotifier" to="." method="_on_AreaNotifier_entered_area"]
[connection signal="timeout" from="DoorCloseTimer" to="." method="_on_DoorCloseTimer_timeout"]

[editable path="AreaNotifier"]
